[gd_scene load_steps=3 format=3 uid="uid://d1fotyw7g14af"]

[ext_resource type="Script" path="res://scenes/custom_mode/custom_mode.gd" id="1_ou6g5"]
[ext_resource type="Script" path="res://scenes/custom_mode/modify_mode.gd" id="2_4720r"]

[node name="CustomWindow" type="Node2D"]
script = ExtResource("1_ou6g5")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.372753, 0.595015, 0.669479, 1)

[node name="ModifyMode" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 896.0
offset_top = 224.0
offset_right = 1046.0
offset_bottom = 255.0
script = ExtResource("2_4720r")

[node name="RestoreTemplateButton" type="Button" parent="."]
offset_left = 896.0
offset_top = 144.0
offset_right = 1024.0
offset_bottom = 175.0
size_flags_horizontal = 0
text = "Restore"

[node name="SaveTemplateButton" type="Button" parent="."]
offset_left = 896.0
offset_top = 96.0
offset_right = 1024.0
offset_bottom = 127.0
text = "Save"

[node name="StartButton" type="Button" parent="."]
offset_left = 896.0
offset_top = 48.0
offset_right = 1024.0
offset_bottom = 79.0
text = "Start"

[node name="ResetButton" type="Button" parent="."]
offset_left = 896.0
offset_top = 192.0
offset_right = 1024.0
offset_bottom = 223.0
text = "Reset"

[node name="MenuButton" type="Button" parent="."]
offset_left = 1024.0
offset_top = 608.0
offset_right = 1152.0
offset_bottom = 639.0
text = "Menu
"

[node name="MoveUpButton" type="Button" parent="."]
offset_left = 1040.0
offset_top = 255.0
offset_right = 1120.0
offset_bottom = 286.0
text = "UP"

[node name="MoveDownButton" type="Button" parent="."]
offset_left = 1040.0
offset_top = 304.0
offset_right = 1120.0
offset_bottom = 335.0
text = "DOWN"

[node name="MoveLeftButton" type="Button" parent="."]
offset_left = 1040.0
offset_top = 352.0
offset_right = 1120.0
offset_bottom = 383.0
text = "LEFT"

[node name="MoveRightButton" type="Button" parent="."]
offset_left = 1040.0
offset_top = 400.0
offset_right = 1120.0
offset_bottom = 431.0
text = "RIGHT"

[connection signal="pressed" from="RestoreTemplateButton" to="." method="_on_restore_template_button_pressed"]
[connection signal="pressed" from="SaveTemplateButton" to="." method="_on_save_template_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="MoveUpButton" to="." method="_on_move_button_pressed" binds= ["up"]]
[connection signal="pressed" from="MoveDownButton" to="." method="_on_move_button_pressed" binds= ["down"]]
[connection signal="pressed" from="MoveLeftButton" to="." method="_on_move_button_pressed" binds= ["left"]]
[connection signal="pressed" from="MoveRightButton" to="." method="_on_move_button_pressed" binds= ["right"]]
